--- a/Landing/landing.html
+++ b/Landing/landing.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/landing.css">
+    <!-- links -->
+   <div>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
@@ -26,12 +28,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+    </div>
+   <!-- end links -->
     <title>Landing</title>
 </head>
 <body>
     <div class="header__wrapper">
         <header class="landing__header">
-            <div class="header__logo"> <img src="r/img/iris.svg"> </div>
+            <div class="header__logo"> <img src="resources/img/iris.svg"> </div>
             <ul class="header__body">
                 <li>
                     <a href="#" class="header__links">Главная</a>
@@ -58,7 +62,7 @@
     </div>
     <div class="main__wrapper">
         <div class="landing__main">
-            <img src="r/img/main.svg" alt="" id="main__image">
+            <img src="resources/img/main.svg" alt="" id="main__image">
             <div class="main-titles">
                 <h1 class="title__zero-type">Мечта предпринимателя</h1>
                 <div class="main__sub-titles">
@@ -79,11 +83,11 @@
                     </h3>
                 </div>
             </div>
-            <img src="r/img/main__developers.png" class="main__devs-img">
+            <img src="resources/img/main__developers.png" class="main__devs-img">
             <div class="main__about-us">
                 <div class="main__card">
                         <div class="icon">
-                            <img src="r/img/Vector.svg" alt="">
+                            <img src="resources/img/Vector.svg" alt="">
                         </div>
                         <div class="main__card-content"> 
                             <div class="main__card__title__container">
@@ -100,7 +104,7 @@
                 </div>
                 <div class="main__card">
                     <div class="icon">
-                        <img src="r/img/Vector.svg" alt="">
+                        <img src="resources/img/Vector.svg" alt="">
                     </div>
                     <div class="main__card-content"> 
                         <div class="main__card__title__container">
@@ -115,7 +119,7 @@
                 </div>
                 <div class="main__card">
                     <div class="icon">
-                        <img src="r/img/Vector.svg" alt="">
+                        <img src="resources/img/Vector.svg" alt="">
                     </div>
                     <div class="main__card-content"> 
                         <div class="main__card__title__container">
@@ -130,7 +134,7 @@
                 </div>
                 <div class="main__card">
                     <div class="icon">
-                        <img src="r/img/Vector.svg" alt="">
+                        <img src="resources/img/Vector.svg" alt="">
                     </div>
                     <div class="main__card-content"> 
                         <div class="main__card__title__container">
@@ -150,7 +154,7 @@
             <div class="main__tables__container"> 
                     <div class="table__slider__btns">
                         <button class="slider__btns" id="left-btn">
-                            <img src="r/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt="">
                         </button>
                     </div>
                 <div class="main__interactive-table">
@@ -161,10 +165,10 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="/r/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt="">
                                 </button>
-                                <img src="r/img/card_backrgound_img.svg" alt="" class="card__background__img">
-                                <img src="r/img/shopping_first.svg" alt="" id="shopping_1_img">
+                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img">
+                                <img src="resources/img/shopping_first.svg" alt="" id="shopping_1_img">
                             </div>
                         </div>
                         <div class="interactive__card"id="second__card">
@@ -173,10 +177,10 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="r/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt="">
                                 </button>
-                                <img src="r/img/card_backrgound_img.svg" alt="" class="card__background__img">
-                                <img src="r/img/shopping_second.svg" alt="" id="shopping_2_img">
+                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img">
+                                <img src="resources/img/shopping_second.svg" alt="" id="shopping_2_img">
                             </div>
                         </div>
                     </div>
@@ -187,9 +191,9 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="r/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt="">
                                 </button>
-                                <img src="r/img/interview_img.svg" alt="" id="interview__img">
+                                <img src="resources/img/interview_img.svg" alt="" id="interview__img">
                             </div>
                         </div>
                         <div class="interactive__card"id="fourth__card">
@@ -198,10 +202,10 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="r/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt="">
                                 </button>
-                                <img src="r/img/card_backrgound_img.svg" alt="" class="four__card__background__img">
-                                    <img src="r/img/sketching_img.svg" alt="" id="sketching__img">
+                                <img src="resources/img/card_backrgound_img.svg" alt="" class="four__card__background__img">
+                                    <img src="resources/img/sketching_img.svg" alt="" id="sketching__img">
                                     </img>
                                 </img>
                             </div>
@@ -210,7 +214,7 @@
                 </div>
             <div class="table__slider__btns">
                 <button class="slider__btns" id="right-btn">
-                    <img src="r/img/left_btn.svg" alt="">
+                    <img src="resources/img/left_btn.svg" alt="">
                 </button>
             </div>
             </div>
@@ -231,7 +235,7 @@
             <div class="second__table__container"> 
                 <div class="table__slider__btns">
                     <button class="slider__btns" id="left-btn">
-                        <img src="r/img/left_btn.svg" alt="">
+                        <img src="resources/img/left_btn.svg" alt="">
                     </button>
                 </div>
                 <div class="second__table">
@@ -259,7 +263,7 @@
                                     + 15%
                                 </div>
                             </div>
-                            <img src="r/img/undraw_active_support_6rwo.svg" alt="" class="active__support__img">
+                            <img src="resources/img/undraw_active_support_6rwo.svg" alt="" class="active__support__img">
                         </div>
                     </div>
                 </div>
@@ -274,7 +278,7 @@
                                     + 25%
                                 </div>
                             </div>
-                            <img src="r/img/Frame 512998.svg" alt="" class="device__linkage__img">
+                            <img src="resources/img/Frame 512998.svg" alt="" class="device__linkage__img">
                         </div>
                     </div>
                     <div class="second__table__block" id="fourth__block">
@@ -294,7 +298,7 @@
                 </div>
                 <div class="table__slider__btns">
             <button class="slider__btns" id="right-btn">
-                <img src="r/img/left_btn.svg" alt="">
+                <img src="resources/img/left_btn.svg" alt="">
             </button>
                 </div>
             </div>
@@ -332,15 +336,15 @@
                     </div>
                     <div class="advertising__block__content__img__container">
                         <button class="kkt__slider__btns" id="left-kkt__btn">
-                            <img src="r/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt="">
                         </button>
                         <div class="advertising__block__content__img">
-                            <img src="r/img/green_background.png" alt="" id="green__background__img">
-                            <img src="r/img/white_background.png" alt="" id="white__background__img">
-                            <img src="r/img/kkt.png" alt="" id="kkt__img">
+                            <img src="resources/img/green_background.png" alt="" id="green__background__img">
+                            <img src="resources/img/white_background.png" alt="" id="white__background__img">
+                            <img src="resources/img/kkt.png" alt="" id="kkt__img">
                         </div>
                         <button class="kkt__slider__btns" id="right-kkt__btn">
-                            <img src="r/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt="">
                         </button>
                         <div class="kkt__radio__btns">
                             <input type="radio" name="" class="radio__btns" id="first__radio" checked>
@@ -399,7 +403,7 @@
                             </select>
                         </div>
                         <div class="scenario__update">
-                            <img src="r/img/plus.png">
+                            <img src="resources/img/plus.png">
                             <span class="scenario__update__text">
                                  Добавить сценарий
                             </span>
@@ -449,53 +453,54 @@
         </div>
     </div>
     <div class="footer__wrapper">
-        <img src="r/img/footer_background.png" alt="" class="footer__bg">
-        <div class="reminder__container">
-            <div class="reminder">
-                <div class="reminder__text">
-                    Оставьте заявку, и мы свяжемся с вами в течение 24 часов
+        <div class="footer__content">
+            <div class="reminder__container">
+                <div class="reminder">
+                    <div class="reminder__text">
+                        Оставьте заявку, и мы свяжемся с вами в течение 24 часов
+                    </div>
+                    <img src="resources/img/iris_logo.png" alt="" class="iris__logo">
                 </div>
-                <img src="r/img/iris_logo.png" alt="" class="iris__logo">
-            </div>
-            <div class="data__input__block">
-                <label for="input__field" class="input__field__label">Город</label>
-                <input type="text" class="input__field" value= "Москва">
-                <label for="input__field" class="input__field__label">Имя</label>
-                <input type="text" class="input__field" placeholder = "Иванов Иван Иванович">
-                <label for="input__field" class="input__field__label">Телефон</label>
-                <input type="text" class="input__field" placeholder = "+7">
-                <div class="agreement__field">
-                    <img src="r/img/check_box_on.png" alt="" class="checkbox__on">
-                    <div class="agreement">Я согласен с условиями сбора 
-                        и обработки персональных данных</div>
-                </div>
-                <button class="application__btn" id="app__white-btn">
-                    Оставить заявку
-                </button>
-            </div>
-        </div>
-        <div class="label__end">
-            <div class="iris__contacts">
-                <div class="iris__contacts__content">
-                    <div class="iris__contacts__label">
-                        Заказать
+                <div class="data__input__block">
+                    <label for="input__field" class="input__field__label">Город</label>
+                    <input type="text" class="input__field" value= "Москва">
+                    <label for="input__field" class="input__field__label">Имя</label>
+                    <input type="text" class="input__field" placeholder = "Иванов Иван Иванович">
+                    <label for="input__field" class="input__field__label">Телефон</label>
+                    <input type="text" class="input__field" placeholder = "+7">
+                    <div class="agreement__field">
+                        <img src="resources/img/check_box_on.png" alt="" class="checkbox__on">
+                        <div class="agreement">Я согласен с условиями сбора 
+                            и обработки персональных данных</div>
                     </div>
-                    <div class="iris__contact">
-                        iris-retail@iris.ru
-                    </div>
-                </div>
-                <div class="iris__contacts__content">
-                    <div class="iris__contacts__label">
-                        Заказать
-                    </div>
-                    <div class="iris__contact">
-                        8 (800) 550-04-79
-                    </div>
+                    <button class="application__btn" id="app__white-btn">
+                        Оставить заявку
+                    </button>
                 </div>
             </div>
-        </div>
-        <div class="something__important">
-            Лигал, который занимает два или три предложения. Будет находиться здесь, в конце футера. Тут будет прописана юридическая информация, чтобы с точки зрени закона все было ок %)
+            <div class="label__end">
+                <div class="iris__contacts">
+                    <div class="iris__contacts__content">
+                        <div class="iris__contacts__label">
+                            Заказать
+                        </div>
+                        <div class="iris__contact">
+                            iris-retail@iris.ru
+                        </div>
+                    </div>
+                    <div class="iris__contacts__content">
+                        <div class="iris__contacts__label">
+                            Заказать
+                        </div>
+                        <div class="iris__contact">
+                            8 (800) 550-04-79
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="something__important">
+                Лигал, который занимает два или три предложения. Будет находиться здесь, в конце футера. Тут будет прописана юридическая информация, чтобы с точки зрени закона все было ок %)
+            </div>
         </div>
     </div>
 </body>
