Test added with html + landing mobile css update

--- a/Landing/landing.html
+++ b/Landing/landing.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/landingMobile.css">
     <!-- links -->
    <div>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +63,7 @@
     </div>
     <div class="main__wrapper">
         <div class="landing__main">
-            <img src="resources/img/main.svg" alt="" id="main__image">
+            <img src="resources/img/main.svg" alt="" id="main__image"></img>
             <div class="main-titles">
                 <h1 class="title__zero-type">Мечта предпринимателя</h1>
                 <div class="main__sub-titles">
@@ -83,11 +84,12 @@
                     </h3>
                 </div>
             </div>
-            <img src="resources/img/main__developers.png" class="main__devs-img">
+            <img src="resources/img/main__developers.png" class="main__devs-img"></img>
             <div class="main__about-us">
-                <div class="main__card">
+                <div class="main__cards__container">
+                    <div class="main__card">
                         <div class="icon">
-                            <img src="resources/img/Vector.svg" alt="">
+                            <img src="resources/img/Vector.svg" alt=""></img>
                         </div>
                         <div class="main__card-content"> 
                             <div class="main__card__title__container">
@@ -104,7 +106,7 @@
                 </div>
                 <div class="main__card">
                     <div class="icon">
-                        <img src="resources/img/Vector.svg" alt="">
+                        <img src="resources/img/Vector.svg" alt=""></img>
                     </div>
                     <div class="main__card-content"> 
                         <div class="main__card__title__container">
@@ -117,33 +119,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__card">
-                    <div class="icon">
-                        <img src="resources/img/Vector.svg" alt="">
-                    </div>
-                    <div class="main__card-content"> 
-                        <div class="main__card__title__container">
-                            <div class="main__card__title">
-                                Обучение
-                            </div>
-                        </div>
-                        <div class="main__card-content__text">
-                            20 лет работы и экспертизы в  розничном бизнесе
-                        </div>
-                    </div>
                 </div>
-                <div class="main__card">
-                    <div class="icon">
-                        <img src="resources/img/Vector.svg" alt="">
-                    </div>
-                    <div class="main__card-content"> 
-                        <div class="main__card__title__container">
-                            <div class="main__card__title">
-                                Решение из коробки
+                <div class="main__cards__container">
+                    <div class="main__card">
+                        <div class="icon">
+                            <img src="resources/img/Vector.svg" alt=""></img>
+                        </div>
+                        <div class="main__card-content"> 
+                            <div class="main__card__title__container">
+                                <div class="main__card__title">
+                                    Обучение
+                                </div>
+                            </div>
+                            <div class="main__card-content__text">
+                                20 лет работы и экспертизы в  розничном бизнесе
                             </div>
                         </div>
-                        <div class="main__card-content__text">
-                            Достань, подключи, работай
+                    </div>
+                    <div class="main__card">
+                        <div class="icon">
+                            <img src="resources/img/Vector.svg" alt=""></img>
+                        </div>
+                        <div class="main__card-content"> 
+                            <div class="main__card__title__container">
+                                <div class="main__card__title">
+                                    Решение из коробки
+                                </div>
+                            </div>
+                            <div class="main__card-content__text">
+                                Достань, подключи, работай
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -154,7 +159,7 @@
             <div class="main__tables__container"> 
                     <div class="table__slider__btns">
                         <button class="slider__btns" id="left-btn">
-                            <img src="resources/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt=""></img>
                         </button>
                     </div>
                 <div class="main__interactive-table">
@@ -165,10 +170,10 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="resources/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt=""></img>
                                 </button>
-                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img">
-                                <img src="resources/img/shopping_first.svg" alt="" id="shopping_1_img">
+                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img"></img>
+                                <img src="resources/img/shopping_first.svg" alt="" id="shopping_1_img"></img>
                             </div>
                         </div>
                         <div class="interactive__card"id="second__card">
@@ -177,10 +182,10 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="resources/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt=""></img>
                                 </button>
-                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img">
-                                <img src="resources/img/shopping_second.svg" alt="" id="shopping_2_img">
+                                <img src="resources/img/card_backrgound_img.svg" alt="" class="card__background__img"></img>
+                                <img src="resources/img/shopping_second.svg" alt="" id="shopping_2_img"></img>
                             </div>
                         </div>
                     </div>
@@ -191,9 +196,9 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="resources/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt=""></img>
                                 </button>
-                                <img src="resources/img/interview_img.svg" alt="" id="interview__img">
+                                <img src="resources/img/interview_img.svg" alt="" id="interview__img"></img>
                             </div>
                         </div>
                         <div class="interactive__card"id="fourth__card">
@@ -202,7 +207,7 @@
                             </div>
                             <div class="interactive__card__content">
                                 <button class="interactive__card__btn">
-                                    <img src="resources/img/Polygon 3.svg" alt="">
+                                    <img src="resources/img/Polygon 3.svg" alt=""></img>
                                 </button>
                                 <img src="resources/img/card_backrgound_img.svg" alt="" class="four__card__background__img">
                                     <img src="resources/img/sketching_img.svg" alt="" id="sketching__img">
@@ -211,10 +216,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="kkt__radio__btns main__tables__radio" >
+                        <input type="radio" name="" class="radio__btns" id="first__radio" checked="">
+                        <input type="radio" name="" class="radio__btns" id="second__radio">
+                        <input type="radio" name="" class="radio__btns" id="third__radio">
+                        <input type="radio" name="" class="radio__btns" id="fourth__radio">
+                    </div>
                 </div>
+                
             <div class="table__slider__btns">
                 <button class="slider__btns" id="right-btn">
-                    <img src="resources/img/left_btn.svg" alt="">
+                    <img src="resources/img/left_btn.svg" alt=""></img>
                 </button>
             </div>
             </div>
@@ -235,7 +247,7 @@
             <div class="second__table__container"> 
                 <div class="table__slider__btns">
                     <button class="slider__btns" id="left-btn">
-                        <img src="resources/img/left_btn.svg" alt="">
+                        <img src="resources/img/left_btn.svg" alt=""></img>
                     </button>
                 </div>
                 <div class="second__table">
@@ -263,7 +275,7 @@
                                     + 15%
                                 </div>
                             </div>
-                            <img src="resources/img/undraw_active_support_6rwo.svg" alt="" class="active__support__img">
+                            <img src="resources/img/undraw_active_support_6rwo.svg" alt="" class="active__support__img"></img>
                         </div>
                     </div>
                 </div>
@@ -278,7 +290,7 @@
                                     + 25%
                                 </div>
                             </div>
-                            <img src="resources/img/Frame 512998.svg" alt="" class="device__linkage__img">
+                            <img src="resources/img/Frame 512998.svg" alt="" class="device__linkage__img"></img>
                         </div>
                     </div>
                     <div class="second__table__block" id="fourth__block">
@@ -298,7 +310,7 @@
                 </div>
                 <div class="table__slider__btns">
             <button class="slider__btns" id="right-btn">
-                <img src="resources/img/left_btn.svg" alt="">
+                <img src="resources/img/left_btn.svg" alt=""></img>
             </button>
                 </div>
             </div>
@@ -336,22 +348,22 @@
                     </div>
                     <div class="advertising__block__content__img__container">
                         <button class="kkt__slider__btns" id="left-kkt__btn">
-                            <img src="resources/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt=""></img>
                         </button>
                         <div class="advertising__block__content__img">
-                            <img src="resources/img/green_background.png" alt="" id="green__background__img">
-                            <img src="resources/img/white_background.png" alt="" id="white__background__img">
-                            <img src="resources/img/kkt.png" alt="" id="kkt__img">
+                            <img src="resources/img/green_background.png" alt="" id="green__background__img"></img>
+                            <img src="resources/img/white_background.png" alt="" id="white__background__img"></img>
+                            <img src="resources/img/kkt.png" alt="" id="kkt__img"></img>
                         </div>
                         <button class="kkt__slider__btns" id="right-kkt__btn">
-                            <img src="resources/img/left_btn.svg" alt="">
+                            <img src="resources/img/left_btn.svg" alt=""></img>
                         </button>
                         <div class="kkt__radio__btns">
-                            <input type="radio" name="" class="radio__btns" id="first__radio" checked>
-                            <input type="radio" name="" class="radio__btns" id="second__radio">
-                            <input type="radio" name="" class="radio__btns" id="third__radio">
-                            <input type="radio" name="" class="radio__btns" id="fourth__radio">
-                            <input type="radio" name="" class="radio__btns" id="fifth__radio">
+                            <input type="radio" name="" class="radio__btns" id="first__radio" checked></input>
+                            <input type="radio" name="" class="radio__btns" id="second__radio"></input>
+                            <input type="radio" name="" class="radio__btns" id="third__radio"></input>
+                            <input type="radio" name="" class="radio__btns" id="fourth__radio"></input>
+                            <input type="radio" name="" class="radio__btns" id="fifth__radio"></input>
                         </div>
                     </div>
                     
@@ -463,11 +475,11 @@
                 </div>
                 <div class="data__input__block">
                     <label for="input__field" class="input__field__label">Город</label>
-                    <input type="text" class="input__field" value= "Москва">
+                    <input type="text" class="input__field" value= "Москва"></input>
                     <label for="input__field" class="input__field__label">Имя</label>
-                    <input type="text" class="input__field" placeholder = "Иванов Иван Иванович">
+                    <input type="text" class="input__field" placeholder = "Иванов Иван Иванович"></input>
                     <label for="input__field" class="input__field__label">Телефон</label>
-                    <input type="text" class="input__field" placeholder = "+7">
+                    <input type="text" class="input__field" placeholder = "+7"></input>
                     <div class="agreement__field">
                         <img src="resources/img/check_box_on.png" alt="" class="checkbox__on">
                         <div class="agreement">Я согласен с условиями сбора 
