landing mobile version 80% progress

--- a/Landing/landing.html
+++ b/Landing/landing.html
@@ -232,7 +232,7 @@
             </div>
             <div class="main-titles">
                 <h1 class="title__second-type">Сценарии роста бизнеса</h1>
-                <div class="sub-title__container">
+                <div class="sub-title__container different__order">
                     <div class="sub-title__content">
                         <div class="sub-title__info__container">
                             <h1 class="sub-title__active__cell">Рост доходов</h1>
@@ -240,7 +240,7 @@
                         <h1 class="sub-title__info__text">Снижение расходов</h1>
                     </div>
                 </div>
-                <div class="sub-title__text__container">
+                <div class="sub-title__text__container mobile different__order">
                     <h1 class="sub-title__text">Мы даём вам инструменты, которые позволят повысить ваш доход и выйти на новый уровень прибыли</h1>
                 </div>
             </div>
@@ -264,6 +264,7 @@
                                 Заказать
                             </button>
                         </div>
+                        
                     </div>
                     <div class="second__table__block"id="second__block">
                         <div class="second__table__block__content">
@@ -277,6 +278,12 @@
                             </div>
                             <img src="resources/img/undraw_active_support_6rwo.svg" alt="" class="active__support__img"></img>
                         </div>
+                    </div>
+                    <div class="second__table kkt__radio__btns main__tables__radio" >
+                        <input type="radio" name="" class="radio__btns" id="first__radio" checked="">
+                        <input type="radio" name="" class="radio__btns" id="second__radio">
+                        <input type="radio" name="" class="radio__btns" id="third__radio">
+                        <input type="radio" name="" class="radio__btns" id="fourth__radio">
                     </div>
                 </div>
                 <div class="interactive__cards__row"id="second__table__second__row">
@@ -315,15 +322,18 @@
                 </div>
             </div>
             <div class="main-titles">
-                <h1 class="title__second-type">Наши касса</h1>
+                <h1 class="title__second-type center">Наши касса</h1>
                 <div class="sub-title__container">
-                    <div class="sub-title__content">
+                    <div class="sub-title__content different__order">
                         <div class="sub-title__info__container">
                             <h1 class="sub-title__active__cell">О кассе</h1>
                         </div>
                         <h1 class="sub-title__info__text">Видео</h1>
                         <h1 class="sub-title__info__text">Характеристики</h1>
                     </div>
+                </div>
+                <div class="sub-title__text__container mobile">
+                    <h1 class="sub-title__text">Выбери решение, которое максимально подходит твоему бизнесу, и&nbsp;посмотри прогнозируемый рост выручки</h1>
                 </div>
             </div>
             <div class="advertising__block">
@@ -372,7 +382,7 @@
             <div class="main-titles">
                 <h1 class="title__second-type">Выбери то, что нужно тебе</h1>
                 <div class="sub-title__container">
-                    <div class="sub-title__content">
+                    <div class="sub-title__content different__order">
                         <div class="sub-title__info__container">
                             <h1 class="sub-title__active__cell">Купить</h1>
                         </div>
@@ -380,7 +390,7 @@
                         <h1 class="sub-title__info__text">Наше ПО</h1>
                     </div>
                 </div>
-                <div class="sub-title__text__container">
+                <div class="sub-title__text__container mobile">
                     <h1 class="sub-title__text">Выбери решение, которое максимально подходит твоему бизнесу, и посмотри прогнозируемый рост выручки</h1>
                 </div>
             </div>
@@ -456,7 +466,7 @@
                                 3650 руб
                             </span>
                             <button class="application__btn">
-                                Оставить заявку
+                                <span>Оставить заявку</span>
                             </button>
                         </div>
                     </div>
@@ -486,7 +496,7 @@
                             и обработки персональных данных</div>
                     </div>
                     <button class="application__btn" id="app__white-btn">
-                        Оставить заявку
+                       <span>Оставить заявку</span> 
                     </button>
                 </div>
             </div>
