landing mobile version 100% progress

--- a/Landing/landing.html
+++ b/Landing/landing.html
@@ -499,6 +499,7 @@
                        <span>Оставить заявку</span> 
                     </button>
                 </div>
+                <img src="resources/img/iris_logo.png" alt="" class="iris__logo__mobile">
             </div>
             <div class="label__end">
                 <div class="iris__contacts">
